--- a/index.html
+++ b/index.html
@@ -101,6 +101,93 @@
     .tile-wide .ttext .title{font-size:16px;}
   }
 
+  /* =========================
+     NEW badge（打ち手検討ツールだけ）
+     ========================= */
+  .tile[data-tool="kit"]{
+    position:relative;
+    overflow:visible;
+  }
+  .new-badge{
+    position:absolute;
+    top:-10px;
+    right:12px;
+    z-index:5;
+    pointer-events:none;
+    animation: mkFloat 2.4s ease-in-out infinite;
+  }
+  .new-badge__pill{
+    display:inline-flex;
+    align-items:center;
+    justify-content:center;
+    height:22px;
+    padding:0 10px;
+    border-radius:999px;
+    font-weight:1000;
+    font-size:12px;
+    letter-spacing:.02em;
+    color:#fff;
+
+    background: linear-gradient(135deg, #ff4d4d 0%, #ffb300 55%, #ffd36b 100%);
+    border: 1px solid rgba(255,255,255,.55);
+    box-shadow:
+      0 10px 24px rgba(255,77,77,.22),
+      0 4px 10px rgba(15,23,42,.18);
+
+    transform-origin: 50% 50%;
+    animation:
+      mkPop .38s cubic-bezier(.2,1.2,.2,1) both,
+      mkGlow 1.8s ease-in-out .4s infinite;
+
+    position:relative;
+  }
+  .new-badge__pill::after{
+    content:"";
+    position:absolute;
+    inset:-1px;
+    border-radius:999px;
+    background: linear-gradient(120deg,
+      transparent 0%,
+      rgba(255,255,255,.55) 45%,
+      transparent 70%
+    );
+    transform: translateX(-120%);
+    animation: mkShine 2.8s ease-in-out 1s infinite;
+    mix-blend-mode: overlay;
+  }
+  @keyframes mkPop{
+    0%{ transform:scale(.7); }
+    70%{ transform:scale(1.08); }
+    100%{ transform:scale(1); }
+  }
+  @keyframes mkFloat{
+    0%,100%{ transform:translateY(0); }
+    50%{ transform:translateY(-4px); }
+  }
+  @keyframes mkGlow{
+    0%,100%{ filter:saturate(1); }
+    50%{
+      filter:saturate(1.15);
+      box-shadow:
+        0 14px 30px rgba(255,77,77,.28),
+        0 5px 12px rgba(15,23,42,.18);
+    }
+  }
+  @keyframes mkShine{
+    0%{ transform:translateX(-120%); }
+    35%{ transform:translateX(120%); }
+    100%{ transform:translateX(120%); }
+  }
+  @media (max-width:480px){
+    .new-badge{ top:-8px; right:10px; }
+    .new-badge__pill{ height:20px; font-size:11px; padding:0 9px; }
+  }
+  @media (prefers-reduced-motion: reduce){
+    .new-badge{ animation:none; }
+    .new-badge__pill{ animation:none; }
+    .new-badge__pill::after{ animation:none; }
+  }
+
   /* ---- 4WD layout (car) ---- */
   .layout-top{display:block;}
   .wheel{position:relative;margin:0 auto;width:min(420px,92vw);aspect-ratio:1/1;}
@@ -494,6 +581,12 @@
       <!-- 横長（次行・全幅）：打ち手検討ツール -->
       <a class="tile tile-wide" data-tool="kit"
          href="https://takatrp.github.io/sale-kit/" target="_blank" rel="noopener">
+
+        <!-- NEW!! badge -->
+        <span class="new-badge" aria-hidden="true">
+          <span class="new-badge__pill">NEW!!</span>
+        </span>
+
         <div class="badge">
           <svg viewBox="0 0 24 24">
             <path d="M4 7h10"/><path d="M4 12h16"/><path d="M4 17h10"/>
