--- a/index.html
+++ b/index.html
@@ -101,93 +101,6 @@
     .tile-wide .ttext .title{font-size:16px;}
   }
 
-  /* =========================
-     NEW badge（打ち手検討ツールだけ）
-     ========================= */
-  .tile[data-tool="kit"]{
-    position:relative;
-    overflow:visible;
-  }
-  .new-badge{
-    position:absolute;
-    top:-10px;
-    right:12px;
-    z-index:5;
-    pointer-events:none;
-    animation: mkFloat 2.4s ease-in-out infinite;
-  }
-  .new-badge__pill{
-    display:inline-flex;
-    align-items:center;
-    justify-content:center;
-    height:22px;
-    padding:0 10px;
-    border-radius:999px;
-    font-weight:1000;
-    font-size:12px;
-    letter-spacing:.02em;
-    color:#fff;
-
-    background: linear-gradient(135deg, #ff4d4d 0%, #ffb300 55%, #ffd36b 100%);
-    border: 1px solid rgba(255,255,255,.55);
-    box-shadow:
-      0 10px 24px rgba(255,77,77,.22),
-      0 4px 10px rgba(15,23,42,.18);
-
-    transform-origin: 50% 50%;
-    animation:
-      mkPop .38s cubic-bezier(.2,1.2,.2,1) both,
-      mkGlow 1.8s ease-in-out .4s infinite;
-
-    position:relative;
-  }
-  .new-badge__pill::after{
-    content:"";
-    position:absolute;
-    inset:-1px;
-    border-radius:999px;
-    background: linear-gradient(120deg,
-      transparent 0%,
-      rgba(255,255,255,.55) 45%,
-      transparent 70%
-    );
-    transform: translateX(-120%);
-    animation: mkShine 2.8s ease-in-out 1s infinite;
-    mix-blend-mode: overlay;
-  }
-  @keyframes mkPop{
-    0%{ transform:scale(.7); }
-    70%{ transform:scale(1.08); }
-    100%{ transform:scale(1); }
-  }
-  @keyframes mkFloat{
-    0%,100%{ transform:translateY(0); }
-    50%{ transform:translateY(-4px); }
-  }
-  @keyframes mkGlow{
-    0%,100%{ filter:saturate(1); }
-    50%{
-      filter:saturate(1.15);
-      box-shadow:
-        0 14px 30px rgba(255,77,77,.28),
-        0 5px 12px rgba(15,23,42,.18);
-    }
-  }
-  @keyframes mkShine{
-    0%{ transform:translateX(-120%); }
-    35%{ transform:translateX(120%); }
-    100%{ transform:translateX(120%); }
-  }
-  @media (max-width:480px){
-    .new-badge{ top:-8px; right:10px; }
-    .new-badge__pill{ height:20px; font-size:11px; padding:0 9px; }
-  }
-  @media (prefers-reduced-motion: reduce){
-    .new-badge{ animation:none; }
-    .new-badge__pill{ animation:none; }
-    .new-badge__pill::after{ animation:none; }
-  }
-
   /* ---- 4WD layout (car) ---- */
   .layout-top{display:block;}
   .wheel{position:relative;margin:0 auto;width:min(420px,92vw);aspect-ratio:1/1;}
@@ -361,6 +274,68 @@
   .mk-mini{font-size:12px; line-height:1.4; color:var(--muted); text-align:center; padding:8px 12px; border-top:1px solid var(--line);}
   .mk-mini a{color:inherit; text-decoration:underline; text-underline-offset:2px;}
   @media (max-width:480px){ .mk-mini{ font-size:11px; } }
+
+  /* ===============================
+     NEW!! インラインバッジ（タイトル直後）
+     - PCでも離れない
+     - 省略記号はテキスト側のみ
+     =============================== */
+  .tile[data-tool="kit"] .ttext .title{
+    display:flex;
+    align-items:center;
+    gap:8px;
+    min-width:0;
+    white-space:nowrap;
+    overflow:visible;   /* タイトル全体は切らない */
+    text-overflow:clip;
+  }
+  .tile[data-tool="kit"] .ttext .title .title-text{
+    min-width:0;
+    overflow:hidden;
+    text-overflow:ellipsis;
+  }
+  .tile[data-tool="kit"] .ttext .title .new-inline{
+    flex:0 0 auto;
+    display:inline-flex;
+    align-items:center;
+    justify-content:center;
+    height:22px;
+    padding:0 10px;
+    border-radius:999px;
+    font-weight:1000;
+    font-size:12px;
+    letter-spacing:.02em;
+    color:#fff;
+
+    background: linear-gradient(135deg, #ff4d4d 0%, #ffb300 55%, #ffd36b 100%);
+    border: 1px solid rgba(255,255,255,.55);
+    box-shadow:
+      0 10px 24px rgba(255,77,77,.22),
+      0 4px 10px rgba(15,23,42,.18);
+
+    animation: mkInlinePop .38s cubic-bezier(.2,1.2,.2,1) both, mkInlineGlow 1.8s ease-in-out .4s infinite;
+  }
+  @keyframes mkInlinePop{
+    0%{ transform:scale(.7); }
+    70%{ transform:scale(1.08); }
+    100%{ transform:scale(1); }
+  }
+  @keyframes mkInlineGlow{
+    0%,100%{ filter:saturate(1); }
+    50%{
+      filter:saturate(1.12);
+      box-shadow:
+        0 14px 30px rgba(255,77,77,.28),
+        0 5px 12px rgba(15,23,42,.18);
+    }
+  }
+  @media (max-width:480px){
+    .tile[data-tool="kit"] .ttext .title{ gap:6px; }
+    .tile[data-tool="kit"] .ttext .title .new-inline{ height:20px; font-size:11px; padding:0 9px; }
+  }
+  @media (prefers-reduced-motion: reduce){
+    .tile[data-tool="kit"] .ttext .title .new-inline{ animation:none; }
+  }
 </style>
 
 <!-- Google tag (gtag.js) -->
@@ -581,12 +556,6 @@
       <!-- 横長（次行・全幅）：打ち手検討ツール -->
       <a class="tile tile-wide" data-tool="kit"
          href="https://takatrp.github.io/sale-kit/" target="_blank" rel="noopener">
-
-        <!-- NEW!! badge -->
-        <span class="new-badge" aria-hidden="true">
-          <span class="new-badge__pill">NEW!!</span>
-        </span>
-
         <div class="badge">
           <svg viewBox="0 0 24 24">
             <path d="M4 7h10"/><path d="M4 12h16"/><path d="M4 17h10"/>
@@ -594,7 +563,10 @@
           </svg>
         </div>
         <div class="ttext">
-          <div class="title">打ち手検討ツール</div>
+          <div class="title">
+            <span class="title-text">打ち手検討ツール</span>
+            <span class="new-inline" aria-label="新規">NEW!!</span>
+          </div>
           <p class="desc">回収の打ち手（単価↑・数量↑・自動化）を検討</p>
         </div>
       </a>
@@ -638,7 +610,7 @@
     © <span id="cpy-year">2025</span> <a href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener license">税理士法人松本会計事務所</a> ｜
     <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="license noopener">CC BY-NC-SA 4.0</a> ｜
     <a href="/tool-portal/terms.html" target="_blank" rel="noopener">利用条件</a> ｜
-    <span id="build-rev">r72</span>（<span id="last-updated-date"></span>）
+    <span id="build-rev">r73</span>（<span id="last-updated-date"></span>）
   </footer>
 
 <script>
