--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
     <div class="layout-top">
       <div class="wheel" aria-label="4WD配置">
         <div class="hub">
-          <img class="carimg" alt="4WD car" src="./四輪駆動.mp4" decoding="async" loading="eager" />
+          <img class="carimg" alt="4WD car" src="./四輪駆動.png" decoding="async" loading="eager" />
         </div>
 
         <!-- 中央：変動PL（単体・連結なし） -->
