--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
     color:var(--brand-700);font-weight:900;padding:6px 10px;border-radius:999px;
     box-shadow:var(--shadow);font-size:14px; white-space:nowrap; z-index:10;
   }
+  .wheel .corner.front{
+    top:7%; left:50%; transform:translateX(-50%);
+    padding:6px 16px;
+  }
   .mini-badge{
     width:20px;height:20px;border-radius:6px;display:grid;place-items:center;
     background:linear-gradient(135deg, var(--brand) 0%, var(--brand-300) 100%);
@@ -149,8 +153,8 @@
     .hub{width:220px;height:220px;}
     #shitenno .wheel .corner.tl{top:18%; left:10%;}
     #shitenno .wheel .corner.tr{top:18%; right:10%;}
-    #shitenno .wheel .corner.bl{bottom:18%; left:10%;}
-    #shitenno .wheel .corner.br{bottom:18%; right:10%;}
+    #shitenno .wheel .corner.bl{bottom:7%; left:10%;}
+    #shitenno .wheel .corner.br{bottom:7%; right:10%;}
     .wheel .corner{gap:8px; padding:8px 10px;}
 
     .pllink{grid-area: pl;}
@@ -170,8 +174,8 @@
 
     #shitenno .wheel .corner.tl{top:22%; left:4%;}
     #shitenno .wheel .corner.tr{top:22%; right:4%;}
-    #shitenno .wheel .corner.bl{bottom:22%; left:4%;}
-    #shitenno .wheel .corner.br{bottom:22%; right:4%;}
+    #shitenno .wheel .corner.bl{bottom:10%; left:4%;}
+    #shitenno .wheel .corner.br{bottom:10%; right:4%;}
 
     .wheel .corner { font-size: 11px; padding: 4px 8px; gap: 4px; height: 28px; border-radius: 14px; box-shadow: 0 2px 8px rgba(15,23,42,.12); }
     .mini-badge { width: 18px; height: 18px; border-radius: 5px; }
@@ -184,8 +188,8 @@
   @media (min-width:768px) and (max-width:1023px){
     #shitenno .wheel .corner.tl{top:26%; left:14%;}
     #shitenno .wheel .corner.tr{top:26%; right:14%;}
-    #shitenno .wheel .corner.bl{bottom:26%; left:14%;}
-    #shitenno .wheel .corner.br{bottom:26%; right:14%;}
+    #shitenno .wheel .corner.bl{bottom:12%; left:14%;}
+    #shitenno .wheel .corner.br{bottom:12%; right:14%;}
     .tiles4-row{grid-template-columns: repeat(2, 1fr);}
   }
 
@@ -280,7 +284,8 @@
      - PCでも離れない
      - 省略記号はテキスト側のみ
      =============================== */
-  .tile[data-tool="kit"] .ttext .title{
+  .tile[data-tool="kit"] .ttext .title,
+  .tile[data-tool="pdf-manager"] .ttext .title{
     display:flex;
     align-items:center;
     gap:8px;
@@ -289,12 +294,14 @@
     overflow:visible;   /* タイトル全体は切らない */
     text-overflow:clip;
   }
-  .tile[data-tool="kit"] .ttext .title .title-text{
+  .tile[data-tool="kit"] .ttext .title .title-text,
+  .tile[data-tool="pdf-manager"] .ttext .title .title-text{
     min-width:0;
     overflow:hidden;
     text-overflow:ellipsis;
   }
-  .tile[data-tool="kit"] .ttext .title .new-inline{
+  .tile[data-tool="kit"] .ttext .title .new-inline,
+  .tile[data-tool="pdf-manager"] .ttext .title .new-inline{
     flex:0 0 auto;
     display:inline-flex;
     align-items:center;
@@ -313,12 +320,16 @@
       0 10px 24px rgba(255,77,77,.22),
       0 4px 10px rgba(15,23,42,.18);
 
-    animation: mkInlinePop .38s cubic-bezier(.2,1.2,.2,1) both, mkInlineGlow 1.8s ease-in-out .4s infinite;
+    animation: mkInlinePop .38s cubic-bezier(.2,1.2,.2,1) both, mkInlinePulse 2.4s ease-in-out .45s infinite, mkInlineGlow 2.4s ease-in-out .45s infinite;
   }
   @keyframes mkInlinePop{
     0%{ transform:scale(.7); }
     70%{ transform:scale(1.08); }
     100%{ transform:scale(1); }
+  }
+  @keyframes mkInlinePulse{
+    0%,100%{ transform:scale(1); }
+    50%{ transform:scale(1.045); }
   }
   @keyframes mkInlineGlow{
     0%,100%{ filter:saturate(1); }
@@ -330,11 +341,14 @@
     }
   }
   @media (max-width:480px){
-    .tile[data-tool="kit"] .ttext .title{ gap:6px; }
-    .tile[data-tool="kit"] .ttext .title .new-inline{ height:20px; font-size:11px; padding:0 9px; }
+    .tile[data-tool="kit"] .ttext .title,
+    .tile[data-tool="pdf-manager"] .ttext .title{ gap:6px; }
+    .tile[data-tool="kit"] .ttext .title .new-inline,
+    .tile[data-tool="pdf-manager"] .ttext .title .new-inline{ height:20px; font-size:11px; padding:0 9px; }
   }
   @media (prefers-reduced-motion: reduce){
-    .tile[data-tool="kit"] .ttext .title .new-inline{ animation:none; }
+    .tile[data-tool="kit"] .ttext .title .new-inline,
+    .tile[data-tool="pdf-manager"] .ttext .title .new-inline{ animation:none; }
   }
 </style>
 
@@ -476,6 +490,11 @@
           <img class="carimg" alt="4WD car" src="./四輪駆動.png" decoding="async" loading="eager" />
         </div>
 
+        <a class="corner front" data-tool="kit"
+           href="https://takatrp.github.io/sale-kit/" target="_blank" rel="noopener">
+          <span class="mini-badge">→</span><span>打ち手検討</span>
+        </a>
+
         <!-- 中央：変動PL（単体・連結なし） -->
         <a class="corner oncar" data-tool="pl"
            href="https://takatrp.github.io/hendou_PL/" target="_blank" rel="noopener">
@@ -576,18 +595,6 @@
   <section id="others" class="section">
     <h2>🧰 その他便利ツール</h2>
     <div class="tiles4">
-      <a class="tile" data-tool="withholding"
-         href="https://takatrp.github.io/withholding/" target="_blank" rel="noopener">
-        <div class="badge">%</div>
-        <div class="ttext"><div class="title">受取利息・配当金 仕訳補助</div><p class="desc">手取額から源泉徴収税額を逆算・仕訳を表示</p></div>
-      </a>
-
-      <a class="tile" data-tool="dep"
-         href="https://takatrp.github.io/genkasyoukyaku/" target="_blank" rel="noopener">
-        <div class="badge">Σ</div>
-        <div class="ttext"><div class="title">減価償却費計算ツール</div><p class="desc">定額法・定率法の償却費を即時計算</p></div>
-      </a>
-
       <a class="tile" data-tool="insurance"
          href="https://takatrp.github.io/kigyoubouei/" target="_blank" rel="noopener">
         <div class="badge">
@@ -602,6 +609,30 @@
           <svg viewBox="0 0 24 24"><path d="M3 12a9 9 0 1 0 9-9"/><path d="M3 3v6h6"/></svg>
         </div>
         <div class="ttext"><div class="title">CCC計算ツール</div><p class="desc">キャッシュコンバージョンサイクルを計算</p></div>
+      </a>
+
+      <a class="tile" data-tool="pdf-manager"
+         href="https://takatrp.github.io/pdf-manager/" target="_blank" rel="noopener">
+        <div class="badge">PDF</div>
+        <div class="ttext">
+          <div class="title">
+            <span class="title-text">セキュアPDFマネージャー</span>
+            <span class="new-inline" aria-label="新規">NEW!!</span>
+          </div>
+          <p class="desc">PDFの分割・結合・整理をブラウザで安全に実行</p>
+        </div>
+      </a>
+
+      <a class="tile" data-tool="withholding"
+         href="https://takatrp.github.io/withholding/" target="_blank" rel="noopener">
+        <div class="badge">%</div>
+        <div class="ttext"><div class="title">受取利息・配当金 仕訳補助</div><p class="desc">手取額から源泉徴収税額を逆算・仕訳を表示</p></div>
+      </a>
+
+      <a class="tile" data-tool="dep"
+         href="https://takatrp.github.io/genkasyoukyaku/" target="_blank" rel="noopener">
+        <div class="badge">Σ</div>
+        <div class="ttext"><div class="title">減価償却費計算ツール</div><p class="desc">定額法・定率法の償却費を即時計算</p></div>
       </a>
     </div>
   </section>
@@ -680,7 +711,8 @@
     withholding: 'https://takatrp.github.io/withholding/',
     dep: 'https://takatrp.github.io/genkasyoukyaku/',
     insurance: 'https://takatrp.github.io/kigyoubouei/',
-    ccc: 'https://takatrp.github.io/CCC/'
+    ccc: 'https://takatrp.github.io/CCC/',
+    'pdf-manager': 'https://takatrp.github.io/pdf-manager/'
   };
 
   // チェーンURL（next を入れ子で作る）
