Tighten spacing between 4WD car cluster and tool tiles

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 
   /* ---- 4WD layout (car) ---- */
   .layout-top{display:block;}
+  #shitenno .layout-top{margin-bottom:-14px;}
   .wheel{position:relative;margin:0 auto;width:min(420px,92vw);aspect-ratio:1/1;}
   .hub{
     position:absolute;top:50%;left:50%;translate:-50% -50%;
@@ -118,7 +119,7 @@
   }
   .wheel .corner.front{
     top:7%; left:50%; transform:translateX(-50%);
-    padding:6px 16px;
+    padding:6px 24px;
   }
   .mini-badge{
     width:20px;height:20px;border-radius:6px;display:grid;place-items:center;
@@ -149,12 +150,13 @@
       display:grid; grid-template-columns: 340px 1fr;
       grid-template-areas: "wheel pl"; align-items:center; gap:16px;
     }
+    #shitenno .layout-top{margin-bottom:-24px;}
     .wheel{grid-area: wheel; width:340px;}
     .hub{width:220px;height:220px;}
     #shitenno .wheel .corner.tl{top:18%; left:10%;}
     #shitenno .wheel .corner.tr{top:18%; right:10%;}
-    #shitenno .wheel .corner.bl{bottom:7%; left:10%;}
-    #shitenno .wheel .corner.br{bottom:7%; right:10%;}
+    #shitenno .wheel .corner.bl{bottom:16%; left:10%;}
+    #shitenno .wheel .corner.br{bottom:16%; right:10%;}
     .wheel .corner{gap:8px; padding:8px 10px;}
 
     .pllink{grid-area: pl;}
@@ -174,22 +176,27 @@
 
     #shitenno .wheel .corner.tl{top:22%; left:4%;}
     #shitenno .wheel .corner.tr{top:22%; right:4%;}
-    #shitenno .wheel .corner.bl{bottom:10%; left:4%;}
-    #shitenno .wheel .corner.br{bottom:10%; right:4%;}
+    #shitenno .wheel .corner.bl{bottom:18%; left:4%;}
+    #shitenno .wheel .corner.br{bottom:18%; right:4%;}
+
+    .wheel .corner.front { padding-inline: 20px; }
 
     .wheel .corner { font-size: 11px; padding: 4px 8px; gap: 4px; height: 28px; border-radius: 14px; box-shadow: 0 2px 8px rgba(15,23,42,.12); }
     .mini-badge { width: 18px; height: 18px; border-radius: 5px; }
     .mini-badge svg { width: 11px; height: 11px; }
 
+    #shitenno .layout-top{margin-bottom:-8px;}
     .pllink{margin: 0 0 10px 0;}
   }
 
   /* ======= Tablet ======= */
   @media (min-width:768px) and (max-width:1023px){
+    #shitenno .layout-top{margin-bottom:-16px;}
     #shitenno .wheel .corner.tl{top:26%; left:14%;}
     #shitenno .wheel .corner.tr{top:26%; right:14%;}
-    #shitenno .wheel .corner.bl{bottom:12%; left:14%;}
-    #shitenno .wheel .corner.br{bottom:12%; right:14%;}
+    #shitenno .wheel .corner.bl{bottom:19%; left:14%;}
+    #shitenno .wheel .corner.br{bottom:19%; right:14%;}
+    .wheel .corner.front { padding-inline: 22px; }
     .tiles4-row{grid-template-columns: repeat(2, 1fr);}
   }
 
